# YAMSPy

./: pyproject.toml
yamspy/: __init__.py
