[project]
name = "yamspy"
version = "0.4.0"
description = "Yet Another Implementation of Multiwii Serial Protocol Python Interface for Betaflight, iNAV, etc."
authors = [
    {name = "Ricardo de Azambuja", email = "ricardo.azambuja@gmail.com"},
]
dependencies = [
    "pyserial",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "GPL"}
keywords = ["CogniFly", "Betaflight", "iNAV", "drone", "UAV", "Multi Wii Serial Protocol", "MSP"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


[project.urls]
Homepage = "https://github.com/thecognifly/YAMSPy"
Downloads = "https://github.com/thecognifly/YAMSPy/archive/refs/tags/v0.3.3.tar.gz"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
